# pyrace

./: .gitignore  Pipfile  README.md  main.py  music_player.py  old_main.py  pyproject.toml  pyrace.py  race.py  resources.py  results.txt  runners.py  test.py  turtle_race.py  utils.py
resources/: tortuga.psd
results/: fast_results.txt
src/pyrace/: main.py  music_player.py  race.py  runners.py  utils.py
src/pyrace/resources/: background.psd
